# twitch_emote_api

./: .editorconfig  .gitignore  LICENSE  README.md  justfile
.github/workflows/: rust_test.yaml
api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  compose.yml
api/src/: cache.rs  cli.rs  emote.rs  lib.rs  main.rs
api/src/emote/: atlas.rs  frame.rs  mod.rs
src-web/: index.html  package.json  pnpm-lock.yaml
src-web/src/: main.ts
src-web/src/lib/: index.ts  material.ts
twitch-emote-client/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.cjs.json  tsconfig.esm.json
twitch-emote-client/scripts/: rename_mjs.sh
twitch-emote-client/src/: atlas.ts  cache.ts  client.ts  emote.ts  index.ts  loader.ts  material.ts  texture.ts
web-example/: .prettierrc.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
web-example/desert/: index.html
web-example/src/: desert.ts  main.ts  style.css
