[package]
name = "api"
version = "0.1.0"
edition = "2021"

[profile.release]
debug=true

[dependencies]
axum = { version = "0.7", features = ["http2", "macros"] }
bytes = "1.7"
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.14"
dashmap = { version = "6.1", features = ["serde"] }
dotenvy = { version = "0.15", features = ["clap"] }
either = { version = "1.13", features = ["serde"] }
env_logger = "0.11"
futures = "0.3"
hashbrown = { version = "0.14", features = ["serde"] }
http = "1.1"
image = "0.25"
jemallocator = "0.5"
log = "0.4"
mime = "0.3"
parking_lot = "0.12"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "gzip", "brotli", "deflate", "json"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sled = "0.34"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
tower = { version = "0.5", features = ["tokio"] }
tower-http = { version = "0.5", features = ["compression-br", "compression-gzip", "cors"] }
url = "2.5"

# image-webp is bugged on current releases erm!
[patch.crates-io]
image-webp = { git = "https://github.com/image-rs/image-webp.git", rev = "c29d6d4587618b43fb8ddeed46638fca86ad0291" }
image = { git = "https://github.com/juliapixel/image.git", branch = "webp_patch" }

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = "0.5"

# FUCK this library dawg
# twitch_api = { version = "0.7.0-rc.7", features = ["client", "helix", "reqwest"] }

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.jemallocator]
opt-level = 3
